examples/invalid/typechecking/unification.ordinis
foo : Int64 -> Float64
foo x = x
